--- a/src/material/bottom-sheet/_m3-bottom-sheet.scss
+++ b/src/material/bottom-sheet/_m3-bottom-sheet.scss
@@ -8,6 +8,10 @@
   @return (
     base: (
       bottom-sheet-container-shape: 28px,
+      bottom-sheet-container-max-width: 640px,
+      bottom-sheet-container-max-height-compact: calc(100vh - 72px),
+      bottom-sheet-container-max-height-expanded: calc(100vh - 56px),
+      bottom-sheet-container-responsive-breakpoint: 640px,
     ),
     color: (
       bottom-sheet-container-text-color: map.get($system, on-surface),
